--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/vue": "^2.1.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
+    "vue-3-mask": "^0.0.1-alpha",
     "vue-meta": "^3.0.0-alpha.2",
     "vue-router": "^4.2.5"
   },
